added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -17,8 +18,6 @@
         <h2>HTML</h2>
 
         <ul>
-
-          <li>Enter your HTML notes here</li>
 
           <li>The head element contains information about the webpage.</li>
 
@@ -36,7 +35,11 @@
 
         <ul>
 
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+
+          <li>Colors can be assigned via multiple methods, including semantic and hexadecimal codes.</li>
 
         </ul>
 
@@ -47,8 +50,6 @@
         <h2>Git</h2>
 
         <ul>
-
-          <li>Enter your Git notes here</li>
 
           <li>git status: checks what branch we are currently on</li>
 
