--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 
         <ul>
 
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>for loops are crucial for running checks against multiple different conditions</li>
 
         </ul>
 
